--- a/ios/bridgeTest/Info.plist
+++ b/ios/bridgeTest/Info.plist
@@ -38,7 +38,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSUserTrackingUsageDescription</key>
-	<string>Tracking helps us bring best and tailored experience to the user.</string>
+	<string>Tracking helps us bring best and tailored experience for you.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
